# firstCMake

./: CMakeLists.txt  Makefile  graph_info.json
CMake/: Docs.cmake  addGitSubmoduls.cmake
app/: CMakeLists.txt  main.cc
configured/: CMakeLists.txt  config.hpp.in
docs/html/: CMakeLists_8txt.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  doxygen.css  files.html  globals.html  globals_func.html  myLib_8cc.html  myLib_8cc__incl.dot  myLib_8h.html  myLib_8h__dep__incl.dot  myLib_8h_source.html
docs/html/search/: all_0.js  all_2.js  all_3.js  files_1.js  functions_0.js  functions_1.js  searchdata.js
src/: CMakeLists.txt  myLib.cc  myLib.h
